--- a/defensive-count-ex.Rmd
+++ b/defensive-count-ex.Rmd
@@ -5,14 +5,24 @@ Alternativer Titel: *Being a Cunt about Counts*
 
 ```{r, eval = FALSE}
 count_them <- function(supposedly_a_count) {
+  checkmate::assert_number(supposedly_a_count, lower = 0, finite = TRUE)
   if (!checkmate::test_count(supposedly_a_count)) {
     warning(
       "rounding ", supposedly_a_count,
       " to the nearest integer."
     )
+    #check if rounding could lead to problem caused by numeric
+    if (0.5 - supposedly_a_count%%1 < .Machine$double.eps){
+      warning("rounding could lead to unexpected results")
+    }
     supposedly_a_count <- round(supposedly_a_count)
   }
-  supposedly_a_count
+  
+  if (!checkmate::test_integer(supposedly_a_count,len=1)) {
+    supposedly_a_count <- as.integer(supposedly_a_count)
+  }
+  
+  return(supposedly_a_count)
 }
 ```
 Wirkt harmlos und unscheinbar, oder? Zweck der effektiv drei Befehle hier drüber ist es, `supposedly_a_count` gegebenenfalls (mit einer Warnung) zu 
@@ -21,5 +31,11 @@ so dass man sich im Folgenden darauf verlassen kann dass `supposedly_a_count` eb
 eine sinnvolle *Anzahl*  von irgendwas repräsentiert. 
 
 a) Identifizieren Sie möglichst viele der hier getroffenen *impliziten* Annahmen über das Objekt `supposedly_a_count`. (Am besten: *bevor* Sie sich die entsprechenden Tests im mitgelieferten Testfile anschauen.)
+
+- single value
+- finite numerical value
+- not NULL
+- not NA
+- values having a decimal part close to .5 could be a problem, because f.e. round(1.5)-1 != round(2.5)-2
 
 b) Modifizieren Sie den Code so dass alle diese impliziten Annahmen mittels *expliziten* `assertions` überprüft werden, so dass immer entweder eine informative Fehlermeldung oder ein korrektes/vernünftiges Ergebnis (evtl. mit entsprechenden Warnmeldungen, s.o.) zurückgegeben wird.
