--- a/defensive-colmeans-ex.Rmd
+++ b/defensive-colmeans-ex.Rmd
@@ -10,7 +10,7 @@ funktionieren oder zumindest hilfreiche Fehlermeldungen erzeugen. Benutzen Sie k
 # compute means of all numeric columns in df
 # output: a data.frame
 col_means <- function(df, na.rm = FALSE) {
-  #the input 'df' must have one of the following formats:
+  # the input 'df' must have one of the following formats:
   checkmate::assert(
     checkmate::check_data_frame(df),
     checkmate::check_numeric(df, min.len = 1),
@@ -18,37 +18,68 @@ col_means <- function(df, na.rm = FALSE) {
     checkmate::check_list(df, min.len = 1),
     checkmate::check_flag(na.rm)
   )
-  #if the input is a vector simply compute the mean
-  #if it's no vector and not data.frame transform it to a data.frame
+  # if the input is a vector simply compute the mean
+  # if it's no vector and not data.frame transform it to a data.frame
   if (is.vector(df) && is.atomic(df)) {
+    return(mean(df, na.rm = na.rm))
+  }
+  else if (is.atomic(df) && class(df)[[1]] == "Date") {
     return(mean(df, na.rm = na.rm))
   }
   else if (!is.data.frame(df)) {
     df <- as.data.frame(df)
   }
 
-  #detect the numerical columns
+  # detect the numerical columns
   numeric <- vapply(df, is.numeric, logical(1))
   numeric_cols <- df[, numeric, drop = FALSE]
-  
-  #if there are either no valid columns or no valid rows, return an empty data.frame
-  if (ncol(numeric_cols) == 0){
+
+  # detect the date columns (only necessary if not every column is a numeric column)
+  date_cols <- data.frame(row.names = row.names(mtcars))
+  if (ncol(df) - ncol(numeric_cols) > 0) {
+    counter <- 1
+    for (j in seq_len(ncol(df))) {
+      if (class(df[, j])[[1]] == "Date") {
+        date_cols <- cbind(date_cols, df[, j])
+        names(date_cols)[counter] <- names(df)[j]
+        counter <- counter + 1
+      }
+    }
+  }
+
+  # if there are either no valid columns or no valid rows, return an empty data.frame
+  if (ncol(numeric_cols) == 0 && ncol(date_cols) == 0) {
     warning("There are no valid columns in the input")
     return(data.frame())
   }
-  if (nrow(numeric_cols) == 0){
+  if (nrow(numeric_cols) == 0 && ncol(date_cols) == 0) {
     warning("There are no valid rows in the input")
     return(data.frame())
   }
- 
-  #if there is only one column, computation is a little different
+
+  # if there is only one column, computation is a little different
   if (ncol(numeric_cols) == 1) {
-    output <- data.frame(dummy=mean(numeric_cols[, 1], na.rm = na.rm))
+    output <- data.frame(dummy = mean(numeric_cols[, 1], na.rm = na.rm))
     names(output) <- names(numeric_cols)
-    return(output)
   }
-  
-  # in any other case use the original approach of this function
-  return(data.frame(lapply(numeric_cols, mean, na.rm = na.rm)))
+  else {
+    # in any other case use the original approach of this function
+    output <- data.frame(lapply(numeric_cols, mean, na.rm = na.rm))
+  }
+
+  # if there are no numeric cols define the output data.frame now
+  if (ncol(numeric_cols) == 0) {
+    output <- data.frame()
+  }
+
+  # additional part for date variables if necessary
+  if (ncol(date_cols) > 0) {
+    for (j in seq_len(ncol(df))) {
+      output <- cbind(output, mean(date_cols[, j], na.rm = na.rm))
+    }
+    names(output) <- c(names(numeric_cols), names(date_cols))
+  }
+
+  return(output)
 }
 ```
