--- a/defensive-count-ex.Rmd
+++ b/defensive-count-ex.Rmd
@@ -4,6 +4,7 @@ Alternativer Titel: *Being a Cunt about Counts*
 
 
 ```{r, eval = FALSE}
+#return input value as integer if possible or round if possible
 count_them <- function(supposedly_a_count) {
   checkmate::assert_number(supposedly_a_count, lower = 0, finite = TRUE)
   if (!checkmate::test_count(supposedly_a_count)) {
@@ -12,14 +13,14 @@ count_them <- function(supposedly_a_count) {
       " to the nearest integer."
     )
     #check if rounding could lead to problem caused by numeric
-    if (0.5 - supposedly_a_count%%1 < .Machine$double.eps){
+    if (0.5 - supposedly_a_count %% 1 < .Machine$double.eps){
       warning("rounding could lead to unexpected results")
     }
     supposedly_a_count <- round(supposedly_a_count)
   }
   
   #if result is not of type integer, transform into integer
-  if (!checkmate::test_integer(supposedly_a_count,len=1)) {
+  if (!checkmate::test_integer(supposedly_a_count, len = 1)) {
     supposedly_a_count <- as.integer(supposedly_a_count)
   }
   
